--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,8 @@
-fastapi
+fastapi[standard]
 uvicorn
-pydantic
 sqlmodel
+sqlalchemy
+pydantic
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
